blog_posts_app/k8s-configs/staging/ingress/backend-posts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-posts-ingress
  namespace: staging
spec:
  tls:
    - secretName: backend-staging-tls-secret
      hosts:
        - staging.backend.blog-posts.com
  rules:
  - host: staging.backend.blog-posts.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rest-internal-service
            port: 
              number: 80
  ingressClassName: traefik
