blog_posts_app/k8s-configs/staging/ingress/frontend-posts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-posts-ingress
  namespace: staging
spec:
  tls:
    - secretName: frontend-staging-posts-com-tls
      hosts:
        - staging.blog-posts.com
  rules:
  - host: staging.blog-posts.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-internal-service
            port: 
              number: 80
  ingressClassName: nginx
